updated docs for order registration
