# api-docs/api-docs.json
@@ -453,14 +453,6 @@
                     },
                     "email": {
                         "type": "email"
-                    },
-                    "tickets": {
-                        "description": "Tickets",
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/TicketType"
-                        },
-                        "collectionFormat": "multi"
                     }
                 },
                 "type": "object"
